# genie3

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml  tasks.sh
configs/: curandomforest.yaml  extratrees.yaml  gradientboosting_xgb.yaml  randomforest.yaml  randomforest_xgb.yaml
genie3/: config.py  data.py  eval.py  genie3.py  plot.py  regressor.py  utils.py
genie3/data/: __init__.py  dataset.py
genie3/regressor/: __init__.py  extratrees.py  forest.py  gradientboosting.py  lightgbm.py  protocol.py  randomforest.py  sklearn.py  xgboost.py
scripts/: gradio_app.py  local_app.py  run_centralized_wandb.py
scripts/preprocessing/: dream_five.py
tests/: test_dataset.py  test_genie3.py  test_regressors.py
