[project]
name = "genie3"
version = "0.1.0"
description = "An implementation of GENIE3 with optional GPU acceleration."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "scikit-learn==1.5.*",
    "pydantic==2.10.*",
    "numpy==1.26.*",
    "tqdm==4.67.*",
    "seaborn==0.13.*",
    "pyyaml==6.0.*",
    "pandas==2.2.*",
    "cupy-cuda12x>=13.4.1",
]

[project.optional-dependencies]
gpu = [
  "cudf-cu12==25.2.*",
  "cuml-cu12==25.2.*"
]

[tool.uv.sources]
cuml-cu12 = [
  { index = "nvidia", extra = "gpu"}
]
cudf-cu12 = [
  { index = "nvidia", extra = "gpu"}
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com/"

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",

  "Environment :: Console",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "gradio>=4.26.0",
    "jupyter==1.1.*",
    "pytest==8.3.*",
    "ruff>=0.6.9",
    "synapseclient==4.7.*",
    "typer>=0.12.5",
    "wandb==0.19.*",
]

[tool.ruff]
line-length = 79
