[project]
name = "genie3"
version = "0.1.0"
description = "An implementation of GENIE3 (GEne Network Inference with Ensemble of trees) with optional GPU acceleration."
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "core",
    "federated",
    "pyyaml>=6.0.3",
]

classifiers = [
  "Development Status :: 3 - Alpha",

  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",

  "Environment :: Console",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]

[tool.uv]
override-dependencies = ["click>=8.1"]

[tool.uv.sources]
core = { workspace = true }
federated = { workspace = true}

[tool.uv.workspace]
members = [ "packages/*" ]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest==8.3.*",
    "ruff>=0.14.2",
    "typer>=0.12.5",
]


[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint.per-file-ignores]
"main.py" = ["F401"]
